--- a/src/style.css
+++ b/src/style.css
@@ -436,6 +436,10 @@ h8 {
 
 /*walkthrough*/
 
+h9 {
+    font-size: 1em;
+}
+
 .walk-through {
     padding: 40px;
     width: 1000px;
@@ -458,6 +462,27 @@ h8 {
     grid-gap: 20px;
     background-color: #3371bd;
     padding: 40px;
+    width: 1000px;
+    max-width: 90%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.semester-grid {
+    background-color: lightgrey;
+    padding: 20px 40px 30px;
+    width: 1000px;
+    max-width: 90%;
+    margin: auto;
+    margin-top: 15px;
+    overflow: hidden;
+}
+
+.semester-classes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 10px;
+    grid-gap: 20px;
     width: 1000px;
     max-width: 90%;
     margin: auto;
