--- a/src/style.css
+++ b/src/style.css
@@ -491,6 +491,15 @@ h9 {
     grid-gap: 20px;
 }
 
+.saves {
+    display: block;
+    background-color: #7DB1DB;
+    vertical-align: top;
+    width: 100%;
+    height: 40px;
+    margin: 10px 0px 10px;
+}
+
 .choose-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
